<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo"
            android:scaleType="centerCrop" />
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/top"
        />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/desc"
        />

    <!-- Login Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="7dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <!-- Email Field -->
            <EditText
                android:id="@+id/emailField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/emailField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Login Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/login"
                android:textSize="@dimen/text"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/passwordField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <View
        android:id="@+id/bottom_space"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@id/loginCard"/>


    <!-- Signup Prompt -->
    <TextView
        android:id="@+id/signupPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_acc"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="45dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_space"
        app:layout_constraintStart_toStartOf="@id/loginCard"
        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/loginCard"
        app:layout_constraintStart_toEndOf="@id/signupPrompt"
        app:layout_constraintBaseline_toBaselineOf="@id/signupPrompt"
        />

</androidx.constraintlayout.widget.ConstraintLayout>